[package]
name = "n2p"
description = "Share your daemons with your peers"
homepage = "https://github.com/ysndr/n2p"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh-base = { version = "0.90", features = ["ticket"] }
iroh = { version = "0.90" }
clap = { version = "4", features = ["derive"] }
tokio = "1"
anyhow = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rand = "0.8"
xdg = "3.0.0"
